popup/popup.css
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
body {
  width: 350px;

  padding: 5px;
  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

label:after {
  content: '\A';
  white-space: pre;
}

.load-bar3 {
  background-color: green;
}

#title,
#tagInput,
#folderSelect,
#username,
#password,
#notes,
#add {
  width: 100%;
  padding: 5px;
  margin-top: 3px;
  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
}

#add {
  height: 3em;
  text-align: center;
}

#popupForm {
  width: 100%;
}

.loader {
  border: 2px solid lightgrey;
  border-radius: 50%;
  height: 20 px;
  width: 20px;
  border-left-color: red;
  border-right-color: red;
  animation: spin 1s infinite linear;
  float: left;
  border-right: 5px;
}

@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

#startMessage {
  font-size: 1.5em;
  text-align: center;
}

#icon-info {
  height: 16px;
  width: 16px;
}

input,
textarea {
  background-color: white;
  font: 1em sans-serif;
}

/* Dark mode */
@media (prefers-color-scheme: dark) {
  body {
    background-color: #202124;
    color: white;
  }
  label {
    color: white;
  }

  input,
  textarea {
    background-color: #333333;
    color: white;
    border-color: rgb(94, 93, 93);
    box-shadow: none;
  }

  input:hover,
  textarea:hover {
    border-color: rgb(124, 119, 119);
  }

  button {
    background-color: #30363d;
    color: white;
    border-color: #e6e6e6;
    box-shadow: none;
  }
}

